Fixed issue with margin on mobile

--- a/src/Pages/css/About.css
+++ b/src/Pages/css/About.css
@@ -184,6 +184,9 @@ html {
   font-size: 2.5rem;
   font-weight: bold;
   margin: 1rem 0;
+  /* scroll-margin-top: 3rem; */
+  /* USE WITH STATIC NAVBAR */
+  /* VALUE HAS TO BE EQUAL TO NAVBAR HEIGHT*/
 }
 
 .answer {
@@ -234,6 +237,7 @@ html {
   .about {
     margin: 0;
     margin-top: 2%;
+    margin-bottom: 2%
   }
 
   .banner-icon {
@@ -263,7 +267,7 @@ html {
 
   .sections {
     width: auto;
-    margin: 0 5%;
+    margin: 0 5% 5% 5%;
   }
 
   .reason-why:first-of-type .About-big-questions {
@@ -275,6 +279,7 @@ html {
 @media (max-aspect-ratio: 1/1) {
   .about {
     margin: 0;
+    margin-bottom: 2%;
   }
 
   .banner-icon {
@@ -304,7 +309,7 @@ html {
 
   .sections {
     width: auto;
-    margin: 0 5%;
+    margin: 0 5% 5% 5%;
   }
 
   .reason-why:first-of-type .About-big-questions {
